crates/djls-templates/src/snapshots/djls_templates__parser__tests__validation__validation_nested_unclosed.snap
---
source: crates/djls-templates/src/parser.rs
assertion_line: 724
expression: errors
---
- UnclosedTag:
    tag: if
    span:
      start: 0
      length: 4
- UnbalancedStructure:
    opening_tag: for
    expected_closing: endfor
    opening_span:
      start: 10
      length: 17
    closing_span:
      start: 43
      length: 5
