crates/djls-templates/src/snapshots/djls_templates__parser__tests__validation__validation_unclosed_if.snap
---
source: crates/djls-templates/src/parser.rs
assertion_line: 691
expression: errors
---
- UnclosedTag:
    tag: if
    span:
      start: 0
      length: 12
